--- a/ex1.html
+++ b/ex1.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
+    <title>HTML 기본 문서</title>
 </head>
 <body>
-    <div>hello</div>
-    .d{
-        <h1>hello</h1>
-    }
+    <h1>프론트엔드 웹 개발</h1>
+    <hr>
+    <p>HTML</p>
+    <p>css</p>
+    <p>자바스크립트</p>
 </body>
 </html>
