--- a/ex1.html
+++ b/ex1.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  //현재 문서가 html5언어로 작성한 웹 문서라는 뜻.
 <html lang="en">
-<head>
+<head>    //웹 브라우저가 웹 문서를 해석하는데 필요한 정보를 입력하는 곳
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML 기본 문서</title>
 </head>
-<body>
+<body>   //실제로 나타나는 곳->앞으로 입력해야할 부분은 태부분 <body>태그 안에 입력되어 있음
     <h1>프론트엔드 웹 개발</h1>
     <hr>
     <p>HTML</p>
