--- a/b/strong.html
+++ b/b/strong.html
@@ -13,7 +13,7 @@
     <!-- <br> -->
     <p>레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
     <!-- <br> -->
-    <blockquote>비타미c와 비타민 p가 풍부해 <strong>혈액순환,감기예방</strong> 등에 좋은 것으로 알려져있다.</blockquote>
+    <blockquote>비타미c와 비타민 p가 <b>풍부해</b> <strong>혈액순환,감기예방</strong> 등에 좋은 것으로 알려져있다.</blockquote>
     <!-- 인용문구를 쓸 때는 blockquote -->
 </body>
 </html>
